# incubator-opendal

.github/workflows/: edge_test.yml
core/edge/s3_on_versioning_enable_bucket/: Cargo.toml  README.md
core/edge/s3_on_versioning_enable_bucket/src/: main.rs
core/src/services/s3/: backend.rs  core.rs
